--- a/backups/9_21_2020/index - Copy.html
+++ b/backups/9_21_2020/index - Copy.html
@@ -92,102 +92,103 @@
       <div class="wrapper site-background">
         <h1 id="about">About</h1>
         <div class="text-area-div">
-          <h4 class="text-area" style="color:white;">
+          <h4 class="text-area" style="color:white; margin-left: 5px; margin-right: 5px;">
             For the last 2 years I have worn many hats while working for Robert Stephen Consulting. 
-            I’ve been able to get my hands on technologies such as Bootstrap, HTML5, CSS3, JavaScript, jQuery, AutoCAD, Revit, ARCHIBUS, SpaceView and numerous others that I hadn't heard of prior to my experience here. 
+            I’ve been able to get my hands on technologies such as Bootstrap, HTML5, CSS3, JavaScript, jQuery, AutoCAD, Revit, ARCHIBUS, SpaceView, Jira and numerous others that I hadn't heard of prior to my experience here. 
           </h4>  
           <br>
           <br>
-          <h4 class="text-area"style="color:white;">
+          <h4 class="text-area"style="color:white; margin-left: 5px; margin-right: 5px;">
             Hired as an IWMS Administrator, I quickly transitioned to a CAD Drafter/Specialist within a few months after one of our top employees in the CAD department moved across the country with his family. 
-            I eventually grew into a Frontend web development role creating Bootstrap web pages with HTML, CSS, JavaScript & jQuery, and have really fallen in love with web design and development ever since. I plan to continue my growth and earn more certifications.
+            I eventually grew into a front end web development role creating Bootstrap web pages with HTML, CSS, JavaScript & jQuery, and have really fallen in love with web design and development ever since. I plan to continue my growth and earn more certifications.
           </h4>  
         </div>
-        <br>
-        <br>
+        <br /><br /><br />
+        <!--start of web development section-->
       <h1 id="projects">Web Development Gallery</h1>
         <div class="img-area">
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceScenario.PNG" style="height:150px;">
             <a href="img/teamSpaceScenario.PNG" target="_blank" ><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Bootstrap upgrade, creating a data table, room picker & side nav.</p>
           </div>
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceUpgrade.png" style="height:150px;">
             <a href="img/teamSpaceUpgrade.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Bootstrap upgrade of legacy site, modernizing the layout.</p>
           </div>
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/room.png" style="height:150px;">
             <a href="img/sv5/room.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Bootstrap upgrade of legacy site, modernizing the layout.</p>
           </div>  
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/buildings.png" style="height:150px;">
             <a href="img/sv5/buildings.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Bootstrap upgrade of legacy site, modernizing the layout.</p>
           </div>
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade.PNG" style="height:150px;" >
             <a href="img/portfolioUpgrade.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Enhancing my portfolio around 9/01/2020.</p>
           </div>
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade2.PNG" style="height:150px;">
             <a href="img/portfolioUpgrade2.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Enhancing my portfolio around 9/05/2020.</p>
           </div>
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade3.PNG" style="height:150px;">
             <a href="img/portfolioUpgrade3.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">Enhancing my portfolio around 9/15/2020.</p>  
           </div>
-          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade4.PNG" style="height:150px;">
             <a href="img/portfolioUpgrade4.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
               <p style="color:black;">Enhancing my portfolio around 9/20/2020.</p>
           </div>
         </div>
+        <br /><br /><br />
         <!--End of web Development work -->
         <!--Start of CAD | Other work -->  
         <!--card start-->
         <div class="wrapper site-background">
           <h1 id="autocad">CAD | Revit | Other Gallery</h1>
             <div class="img-area">
-              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
                 <img alt="Polyline example 1" class="project-image img-thumbnail example-img-size single-img" src="img/plines.PNG" style="height:150px;">
                 <a href="img/plines.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">CAD drawing cleanup and polylining 25,000 sq ft.</p>
               </div>
-              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
                 <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/plines2.PNG" style="height:150px;">
                 <a href="img/plines2.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">CAD drawing cleanup and polylining 25,000 sq ft.</p>
               </div>
-              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
                 <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/cad/25k_with_category.PNG" style="height:150px;">
                 <a href="img/cad/25k_with_category.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">AutoCAD Room Type & Category assignments for ARCHIBUS.</p>
               </div>
-              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
                 <img alt="Sample Revit model home" class="project-image img-thumbnail example-img-size single-img" src="img/getting_started_01.PNG" style="height:150px;">
                 <a href="img/getting_started_01.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">Revit example home model.</p>
               </div>
-              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
                 <img alt="Excel Direct Connect Report" class="project-image img-thumbnail example-img-size single-img" src="img/exceldc.PNG" style="height:150px;">
                 <a href="img/exceldc.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">Excel Direct Connect Report created for an RSC client.</p>
               </div>
-              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px; border-style: solid;border-color: lightskyblue;">
                 <img alt="Aquarium" class="project-image img-thumbnail example-img-size single-img" src="img/aq.PNG" style="height:150px;">
                 <a href="img/aq.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black; word-wrap: break-word;">Slide from the annual RSC Company Presentation.</p>
               </div>
             </div>       
+            <br /><br /><br />
           <!-- card end-->
           <!--Start of Side Proejects -->
-          <br />
           <h1 id="side-projects" class="center site-background">
             Side Projects
           </h1>
